20220211 Styling the Hero page

--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -1,7 +1,7 @@
 @import "../../styles/styles.scss";
 
 .navbar {
-  background: $bg-lightBlue-color;
+  background: $bg-white-color;
 
   & .navbar-toggler {
     border: 0;
