--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -1,9 +1,10 @@
 // Color
 
-$bg-lightBlue-color: lightblue;
+$bg-white-color: #fff;
 $text-hover-color: palevioletred;
 $black: #000;
 
 // font-size
 
+$text-font-size: 1.25rem;
 $btn-font-size: 1.75rem;
