--- a/client/src/components/Hero/hero.scss
+++ b/client/src/components/Hero/hero.scss
@@ -1,13 +1,54 @@
 @import "../../styles/styles.scss";
 
 #hero {
+  & .carousel-indicators {
+    & button {
+    }
+  }
+
   & .carousel-inner {
-    position: absolute;
     height: 100%;
+
     & .carousel-item {
       height: 100%;
+
+      &::before {
+        content: "";
+        position: absolute;
+        height: 100%;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        background-color: rgba(30, 35, 40, 0.6);
+      }
+
       & img {
         object-fit: cover;
+      }
+
+      & .carousel-caption {
+        bottom: 0;
+        top: 50%;
+      }
+    }
+  }
+
+  & .carousel-control-prev,
+  .carousel-control-next {
+    width: 5%;
+    transition: 0.4s ease-in-out;
+
+    & svg {
+      width: 3rem;
+      height: 3rem;
+      color: #fff;
+      transition: 0.4s;
+      opacity: 0.5;
+      &:hover {
+        color: $text-hover-color;
+        opacity: 1;
+        transform: scale(1.5);
       }
     }
   }
