--- a/client/src/styles/_mixins.scss
+++ b/client/src/styles/_mixins.scss
@@ -11,6 +11,7 @@
 @mixin LinkTag {
   display: block;
   padding: 0.5rem 1rem;
+  font-size: $text-font-size;
   color: $black;
   text-decoration: none;
   transition: color 0.4s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
