--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -3,8 +3,9 @@
 $bg-white-color: #fff;
 $text-hover-color: palevioletred;
 $black: #000;
+$Pageheading-bg-color: #f8f9fa;
 
 // font-size
 
-$text-font-size: 1.25rem;
+$text-font-size: 1rem;
 $btn-font-size: 1.75rem;
