--- a/client/src/components/Hero/hero.scss
+++ b/client/src/components/Hero/hero.scss
@@ -3,6 +3,17 @@
 #hero {
   & .carousel-indicators {
     & button {
+      width: 12px;
+      height: 12px;
+      transition: 0.4s;
+      &:hover {
+        background-color: $text-hover-color;
+        transform: translateY(-3px);
+      }
+    }
+    & .active {
+      background-color: $text-hover-color;
+      transform: translateY(-3px);
     }
   }
 
@@ -11,6 +22,10 @@
 
     & .carousel-item {
       height: 100%;
+      // display: flex;
+      // justify-content: center;
+      // align-items: center;
+      // bottom: 0;
 
       &::before {
         content: "";
@@ -29,7 +44,7 @@
 
       & .carousel-caption {
         bottom: 0;
-        top: 50%;
+        top: 45%;
       }
     }
   }
