--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -2,10 +2,13 @@
 
 $bg-white-color: #fff;
 $text-hover-color: palevioletred;
-$black: #000;
+$num-color: #ed5b5b;
+$icon-color: #ed5b5b;
+$heading-color: #000;
 $Pageheading-bg-color: #f8f9fa;
 
 // font-size
 
 $text-font-size: 1rem;
+$h4-font-size: 24px;
 $btn-font-size: 1.75rem;
