--- a/client/src/styles/_mixins.scss
+++ b/client/src/styles/_mixins.scss
@@ -12,7 +12,7 @@
   display: block;
   padding: 0.5rem 1rem;
   font-size: $text-font-size;
-  color: $black;
+  color: $heading-color;
   text-decoration: none;
   transition: color 0.4s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -27,4 +27,44 @@
   display: flex;
   justify-content: $value;
   align-items: center;
+}
+
+@mixin transition-text {
+  transition: all ease-in-out 0.3s;
+}
+
+@mixin box-and-shadow {
+  padding: 50px 30px;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  transition: all ease-in-out 0.3s;
+}
+
+@mixin animation-fadeInY($name, $from, $to) {
+  @keyframes #{$name} {
+    0% {
+      transform: translateY($from);
+      opacity: 0;
+      display: none;
+    }
+    100% {
+      transform: translateY($to);
+      opacity: 1;
+      display: block;
+    }
+  }
+}
+
+@mixin animation-fadeInX($name, $from, $to) {
+  @keyframes #{$name} {
+    0% {
+      transform: translateX($from);
+      opacity: 0;
+      display: none;
+    }
+    100% {
+      transform: translateX($to);
+      opacity: 1;
+      display: block;
+    }
+  }
 }
