--- a/client/src/components/Hero/hero.scss
+++ b/client/src/components/Hero/hero.scss
@@ -2,70 +2,83 @@
 
 #hero {
   overflow: hidden;
-  & .carousel-indicators {
-    & button {
-      width: 12px;
-      height: 12px;
-      transition: 0.4s;
-      &:hover {
+  & .carousel-part {
+    & .carousel-indicators {
+      & button {
+        width: 12px;
+        height: 12px;
+        transition: $transition-props;
+        &:hover {
+          background-color: $text-hover-color;
+          transform: translateY(-3px);
+        }
+      }
+      & .active {
         background-color: $text-hover-color;
         transform: translateY(-3px);
       }
     }
-    & .active {
-      background-color: $text-hover-color;
-      transform: translateY(-3px);
-    }
-  }
 
-  & .carousel-inner {
-    height: 100%;
-
-    & .carousel-item {
+    & .carousel-inner {
       height: 100%;
-      // display: flex;
-      // justify-content: center;
-      // align-items: center;
-      // bottom: 0;
 
-      &::before {
-        content: "";
-        position: absolute;
+      & .carousel-item {
         height: 100%;
-        top: 0;
-        right: 0;
-        left: 0;
-        bottom: 0;
-        background-color: rgba(30, 35, 40, 0.6);
-      }
+        // display: flex;
+        // justify-content: center;
+        // align-items: center;
+        // bottom: 0;
 
-      & img {
-        object-fit: cover;
-      }
+        &::before {
+          content: "";
+          position: absolute;
+          height: 100%;
+          top: 0;
+          right: 0;
+          left: 0;
+          bottom: 0;
+          background-color: rgba(30, 35, 40, 0.6);
+        }
 
-      & .carousel-caption {
-        bottom: 0;
-        top: 45%;
+        & img {
+          object-fit: cover;
+        }
+
+        & .carousel-caption {
+          bottom: 0;
+          top: 45%;
+        }
+      }
+    }
+
+    & .carousel-control-prev,
+    .carousel-control-next {
+      width: 10%;
+      transition: $transition-props;
+
+      & svg {
+        width: 3rem;
+        height: 3rem;
+        color: #fff;
+        transition: 0.4s;
+        opacity: 0.5;
+        &:hover {
+          color: $text-hover-color;
+          opacity: 1;
+          transform: scale(1.5);
+        }
       }
     }
   }
 
-  & .carousel-control-prev,
-  .carousel-control-next {
-    width: 10%;
-    transition: 0.4s ease-in-out;
-
-    & svg {
-      width: 3rem;
-      height: 3rem;
-      color: #fff;
-      transition: 0.4s;
-      opacity: 0.5;
-      &:hover {
-        color: $text-hover-color;
-        opacity: 1;
-        transform: scale(1.5);
-      }
+  & .partnership {
+    & .trypic {
+      width: 100%;
+      height: 500px;
+      background: url("../../asset/images/div5.jpg");
+      background-attachment: fixed;
+      background-position: center center;
+      background-size: cover;
     }
   }
 }
