--- a/client/src/styles/_mixins.scss
+++ b/client/src/styles/_mixins.scss
@@ -33,6 +33,12 @@
   transition: all ease-in-out 0.3s;
 }
 
+@mixin icon-css {
+  font-size: $icon-font-size;
+  margin-bottom: 10px;
+  color: $icon-color;
+}
+
 @mixin box-and-shadow {
   padding: 50px 30px;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
