20220215 little adjust to client side (button) and create models in server side.

--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -1,13 +1,19 @@
 // Color
 
 $bg-white-color: #fff;
-$text-hover-color: palevioletred;
+$text-hover-color: #ed5b5b;
 $num-color: #ed5b5b;
+$btn-color: #ed5b5b;
 $icon-color: #ed5b5b;
+$text-color: #000;
 $heading-color: #000;
 $Pageheading-bg-color: #f8f9fa;
 $footer-text-color: #fff;
 $footer-color: #424242;
+
+// Color swap (text and bg)
+$swap-bg-color-to-red: #ed5b5b;
+$swap-text-color: #fff;
 
 // font-size
 
