--- a/client/src/components/partials/Form/formtable.scss
+++ b/client/src/components/partials/Form/formtable.scss
@@ -4,7 +4,23 @@ form {
   & textarea {
     height: 300px;
   }
-  & button {
-    width: 100%;
+
+  & .btn {
+    color: $text-color;
+    width: 30%;
+
+    &:hover {
+      background-color: $swap-bg-color-to-red;
+      color: $swap-text-color;
+    }
+  }
+
+  & .btn-primary {
+    background-color: transparent;
+    border-radius: 20px;
+    border: 2px solid $btn-color;
+    &:hover {
+      border: 2px solid $swap-text-color;
+    }
   }
 }
