20220216 The version 1 of the website has been done.  Push to git and deploy them.

--- a/client/src/components/Hero/hero.scss
+++ b/client/src/components/Hero/hero.scss
@@ -47,6 +47,9 @@
         & .carousel-caption {
           bottom: 0;
           top: 45%;
+          & h1 {
+            font-size: 3.5rem;
+          }
         }
       }
     }
