--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -18,6 +18,7 @@ $swap-text-color: #fff;
 // font-size
 
 $text-font-size: 1rem;
+$h3-font-size: 28px;
 $h4-font-size: 24px;
 $btn-font-size: 1.75rem;
 $icon-font-size: 30px;
