--- a/client/src/components/partials/Form/formtable.scss
+++ b/client/src/components/partials/Form/formtable.scss
@@ -6,21 +6,10 @@ form {
   }
 
   & .btn {
-    color: $text-color;
-    width: 30%;
-
-    &:hover {
-      background-color: $swap-bg-color-to-red;
-      color: $swap-text-color;
-    }
+    @include btnStyle;
   }
 
   & .btn-primary {
-    background-color: transparent;
-    border-radius: 20px;
-    border: 2px solid $btn-color;
-    &:hover {
-      border: 2px solid $swap-text-color;
-    }
+    @include btn-color-style;
   }
 }
