--- a/client/src/components/partials/SuccessAndError/successanderror.scss
+++ b/client/src/components/partials/SuccessAndError/successanderror.scss
@@ -1,6 +1,6 @@
-@import "../../styles/styles.scss";
+@import "../../../styles/styles.scss";
 
-#submit {
+.container {
   & .div-container {
     @include displayFlex(center);
     flex-direction: column;
