20220218 version 1 completed.  Combined to the submit and error page.  Deployed for both front-end and back-end.

--- a/client/src/components/Services/services.scss
+++ b/client/src/components/Services/services.scss
@@ -4,7 +4,10 @@
 @include animation-fadeInY(fade-up3, 180px, 0px);
 
 #services {
+  margin-bottom: 10rem;
   & .services-part1 {
+    margin-top: 8rem;
+    margin-bottom: 8rem;
     & .gridCol-div {
       transition: $transition-props;
 
