--- a/client/src/components/partials/Form/formtable.scss
+++ b/client/src/components/partials/Form/formtable.scss
@@ -1,6 +1,11 @@
 @import "../../../styles/styles.scss";
 
 form {
+  & .error-alert {
+    padding: 0.5rem 0.75rem;
+    border: none;
+  }
+
   & textarea {
     height: 300px;
   }
