--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -3,6 +3,15 @@
 .navbar {
   background: $bg-white-color;
 
+  & .navbar-brand {
+    @include transition-text;
+    color: $text-color;
+
+    &:hover {
+      color: $text-hover-color;
+    }
+  }
+
   & .navbar-toggler {
     border: 0;
     font-size: $btn-font-size;
