--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -22,6 +22,7 @@ $h3-font-size: 28px;
 $h4-font-size: 24px;
 $btn-font-size: 1.75rem;
 $icon-font-size: 30px;
+$icon-font-size-large: 4rem;
 
 // transition time
 
